compiler complete, generates a hex